# KinectRecorder

./: README.md
src/: CMakeLists.txt  filecapture.cpp  filecapture.hpp  icapture.cpp  icapture.hpp  kinectcapture.cpp  kinectcapture.hpp  luxframe.cpp  luxframe.hpp  main.cpp  mainform.cpp  mainform.hpp  mainwindow.ui
src/compile-tests/: test-openni.cpp
